[gd_scene load_steps=11 format=3 uid="uid://dn7j527vmegka"]

[ext_resource type="Script" path="res://main.gd" id="1_03no5"]
[ext_resource type="Theme" uid="uid://c2t22owqfyns8" path="res://theme.tres" id="1_d2mbj"]
[ext_resource type="PackedScene" uid="uid://mna8adl51ysw" path="res://scenes/space/remote/space_remote_systems.tscn" id="1_og4bw"]
[ext_resource type="PackedScene" uid="uid://donu4757x48qs" path="res://scenes/space/local/space_local_system.tscn" id="2_ea67m"]
[ext_resource type="PackedScene" uid="uid://bbo63hpxfc223" path="res://space_near.tscn" id="2_xkawo"]
[ext_resource type="PackedScene" uid="uid://fuj2xt1sh8nm" path="res://hud.tscn" id="6_n03fi"]
[ext_resource type="Shader" path="res://fullscreen_overlay.gdshader" id="7_kbxe2"]
[ext_resource type="Script" path="res://debugging_server.gd" id="8_ljcxv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2amsc"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rkcta"]
shader = ExtResource("7_kbxe2")
shader_parameter/curved_display = false
shader_parameter/vignette = false
shader_parameter/vlines = true
shader_parameter/flicker = false
shader_parameter/noise = true
shader_parameter/tonemap = true
shader_parameter/glow = false
shader_parameter/ghosting = false
shader_parameter/scanlines = true
shader_parameter/level_adjustment = true
shader_parameter/wiggle = false
shader_parameter/bleed = true
shader_parameter/timer_multiplier = 1.0
shader_parameter/horizontal_chromatic_abberation_r = 0.0
shader_parameter/horizontal_chromatic_abberation_g = 0.0
shader_parameter/horizontal_chromatic_abberation_b = 0.0
shader_parameter/vertical_chromatic_abberation_r = 0.0
shader_parameter/vertical_chromatic_abberation_g = 0.0
shader_parameter/vertical_chromatic_abberation_b = 0.0

[node name="MainControl" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
theme = ExtResource("1_d2mbj")
script = ExtResource("1_03no5")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2amsc")

[node name="SubViewportContainer_SpaceLocal" type="SubViewportContainer" parent="."]
z_index = 1
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer_SpaceLocal" groups=["subviewports"]]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
physics_object_picking = true
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="SpaceLocalSystem" parent="SubViewportContainer_SpaceLocal/SubViewport" instance=ExtResource("2_ea67m")]
unique_name_in_owner = true

[node name="SubViewportContainer_SpaceRemote" type="SubViewportContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
mouse_force_pass_scroll_events = false

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer_SpaceRemote" groups=["subviewports"]]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
physics_object_picking = true
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="SpaceRemoteSystems" parent="SubViewportContainer_SpaceRemote/SubViewport" instance=ExtResource("1_og4bw")]
unique_name_in_owner = true

[node name="SubViewportContainer_SpaceNear" type="SubViewportContainer" parent="."]
z_index = 2
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer_SpaceNear" groups=["subviewports"]]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
physics_object_picking = true
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="SpaceNear" parent="SubViewportContainer_SpaceNear/SubViewport" instance=ExtResource("2_xkawo")]
unique_name_in_owner = true

[node name="SubViewportContainer_HUD" type="SubViewportContainer" parent="."]
z_index = 9
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer_HUD" groups=["subviewports"]]
disable_3d = true
own_world_3d = true
transparent_bg = true
handle_input_locally = false
gui_disable_input = true
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="CanvasLayer" type="CanvasLayer" parent="SubViewportContainer_HUD/SubViewport"]

[node name="HUD" parent="SubViewportContainer_HUD/SubViewport/CanvasLayer" instance=ExtResource("6_n03fi")]
unique_name_in_owner = true
metadata/_edit_use_anchors_ = true

[node name="CRTCanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CRTCanvasLayer"]
material = SubResource("ShaderMaterial_rkcta")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DebugServer" type="Node" parent="."]
script = ExtResource("8_ljcxv")
